# Chilena-microkernel

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
Chilena-microkernel-main/src/sys/fs/: mod.rs
Chilena-microkernel-main/src/usr/: shell.rs
chn/: x86_64-chilena-user.json
chn/chilena_api/: Cargo.toml
chn/chilena_api/src/: lib.rs
chn/programs/counter/: Cargo.toml  chn.ld
chn/programs/counter/.cargo/: config.toml
chn/programs/counter/src/: main.rs
chn/programs/fibonacci/: Cargo.toml
chn/programs/fibonacci/src/: main.rs
chn/programs/hello/: Cargo.toml
chn/programs/hello/.cargo/: config.toml
chn/programs/hello/src/: main.rs
chn/programs/sysinfo/: Cargo.toml
chn/programs/sysinfo/src/: main.rs
chn/tools/: chfs-inject.py  chn-pack.py
src/: lib.rs  main.rs
src/api/: console.rs  io.rs  mod.rs  process.rs  syscall.rs
src/api/fs/: mod.rs
src/sys/: acpi.rs  console.rs  cpu.rs  gdt.rs  idt.rs  ipc.rs  keyboard.rs  mod.rs  pci.rs  pic.rs  process.rs  sched.rs  serial.rs  virtio.rs
src/sys/arch/: idt.rs  mod.rs
src/sys/clk/: mod.rs
src/sys/debug/: mod.rs
src/sys/fs/: chfs.rs  mod.rs
src/sys/mem/: bitmap.rs  heap.rs  mod.rs  paging.rs
src/sys/power/: mod.rs
src/sys/proc/: mod.rs  process.rs
src/sys/syscall/: mod.rs  number.rs  service.rs
src/sys/vga/: mod.rs
src/usr/: help.rs  info.rs  mod.rs  shell.rs
src/usr/cl/: mod.rs  shell.rs
src/usr/cl/basic/: cd.rs  echo.rs  help.rs  info.rs  mod.rs
src/usr/cl/chfs/: cat.rs  format.rs  ls.rs  mod.rs  (+2 more)
src/usr/disk/: client.rs  mod.rs  proto.rs  server.rs
(+16 files in other folders)
